--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<canvas id='c' style='position: absolute; left: 0px; top: 0px;'>
 </canvas>
 	<script>
+	// choose red aliance and blue, make switches oppositie (different patterns maybe (die or loose points))
+	// More frc themed
+	// Dont forget powerups (boost, force, levitate)
+	// maybe automomous
+	// Collect power cubes for coins
+	
 		window.addEventListener('touchstart', function() {
 			accelerate(-0.3);
 		});
