--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body onload="startGame()" id="script">
-	<canvas id='c' style='position: absolute; left: 0px; top: 0px;'>
-</canvas>
+	<canvas id='c' style='position: absolute; left: 0px; top: 0px; z-index: 2;'></canvas>
+	<canvas id='cb' style='position: absolute; left: 0px; top: 0px; z-index: 1;'></canvas>
+	<img id="source" src="crowd.png" style="opacity: 0.0;">
 	<script>
 		// choose red aliance and blue, make switches opposite (different patterns maybe (die or loose points))
 		// Slightly more frc themed
@@ -29,31 +30,45 @@
 		var myGamePiece;
 		var myObstacles = [];
 		var myCoins = [];
+		var backgrounds = [];
 		var myScore;
 		var score = 0;
 		var coinScore = localStorage.getItem('coins') || 0;
 		var highScore = localStorage.getItem('highScore') || 0;
 
 		function startGame() {
-			myGamePiece = new component(myGameArea.canvas.height * 0.15, myGameArea.canvas.height * 0.15, "red", myGameArea.canvas.width*0.05, myGameArea.canvas.height * 0.5);
+			// this.canvas.width = window.innerWidth;
+			// this.canvas.height = window.innerHeight;
+			myGamePiece = new component(myGameArea.canvas.height * 0.15, myGameArea.canvas.height * 0.15, "red", myGameArea.canvas.width * 0.05, myGameArea.canvas.height * 0.5);
 			myGamePiece.gravity = 0.05;
-			myScore = new component("15px", "Oswald", "Blue", (c.width * 2) - (myGameArea.canvas.width * 0.67), 30, "text");
+			myScore = new component("15px", "Oswald", "yellow", (c.width * 2) - (myGameArea.canvas.width * 0.67), 30, "text");
 			myGameArea.start();
 		}
 
 		var myGameArea = {
 			canvas: document.getElementById("c"),
+			canvasb: document.getElementById("cb"),
 			start: function() {
 				this.canvas.width = window.innerWidth;
 				this.canvas.height = window.innerHeight;
+				this.canvasb.width = window.innerWidth;
+				this.canvasb.height = window.innerHeight;
 				this.context = this.canvas.getContext("2d");
+				this.contextb = this.canvasb.getContext("2d");
 				document.body.insertBefore(this.canvas, document.body.childNodes[0]);
 				this.frameNo = 0;
+				backgrounding();
 				updateGameArea();
 			},
 			clear: function() {
 				this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
 			}
+		}
+
+		function backgrounding() {
+			var x = myGameArea.canvas.width;
+			backgrounds.push(new component(myGameArea.canvas.width, myGameArea.canvas.height, "green", 0, 0, "background"));
+			backgrounds.push(new component(myGameArea.canvas.width, myGameArea.canvas.height, "green", x, 0, "background"));
 		}
 
 		function component(width, height, color, x, y, type, turnAngle, randomSize) {
@@ -71,10 +86,12 @@
 			this.randomSize = randomSize;
 			this.update = function() {
 				ctx = myGameArea.context;
-				if (this.type == "text") {
-					ctx.font = this.width + " " + this.height;
-					ctx.fillStyle = color;
-					ctx.fillText(this.text, this.x, this.y);
+				if (this.type == "background"){
+					// console.log("called in background");
+					bctx = myGameArea.contextb;
+					var bkPic = document.getElementById('source');
+					bctx.drawImage(bkPic, this.x, this.y, this.width, this.height);
+					// ctx.drawImage(color, this.x, this.y, this.width, this.height);
 				} else if (this.type == "Obstacles") {
 					ctx.fillStyle = color;
 					var finalxs = findCoordinatesX(this.width, this.height, this.x, this.y, this.randomSize, this.turnAngle);
@@ -90,6 +107,10 @@
 				} else if (this.type == "coin") {
 					ctx.fillStyle = color;
 					ctx.fillRect(this.x, this.y, this.width, this.height);
+				} else if (this.type == "text") {
+					ctx.font = this.width + " " + this.height;
+					ctx.fillStyle = color;
+					ctx.fillText(this.text, this.x, this.y);
 				} else {
 					ctx.fillStyle = color;
 					ctx.fillRect(this.x, this.y, this.width, this.height);
@@ -199,15 +220,15 @@
 					return true;
 				}
 			}
-			return false
+			return false;
 		}
 
 		function updateGameArea() {
+			// ctx.drawImage(backgrounds, base_image.width, base_image.height);
 			var x, width, height, gap, minHeight, maxHeight, minGap, maxGap;
 			for (i = 0; i < myObstacles.length; i += 1) {
 				if (myGamePiece.crashWith(myObstacles[i])) {
 					setTimeout(location.reload(), 500);
-
 					return;
 				}
 			}
@@ -220,6 +241,7 @@
 			myGameArea.clear();
 			myGameArea.frameNo += 1;
 			speed = updateSpeed();
+
 			//console.log("(myGameArea.frameNo / interval) % 1: " + (myGameArea.frameNo / interval) % 1 + ", everyinterval(interval): " + everyinterval(interval));
 			if (myGameArea.frameNo == 1 || newObstacle()) {
 				x = myGameArea.canvas.width;
@@ -233,26 +255,34 @@
 				var chosenZone = 0;
 				if (zones == 0) {
 					if (chosenNumber == 0) {
-						chosenZone = 1
+						chosenZone = 1;
 					} else if (chosenNumber == 1) {
-						chosenZone = 2
+						chosenZone = 2;
 					}
 				} else if (zones == 1) {
 					if (chosenNumber == 0) {
-						chosenZone = 0
+						chosenZone = 0;
 					} else if (chosenNumber == 1) {
-						chosenZone = 2
+						chosenZone = 2;
 					}
 				} else if (zones == 2) {
 					if (chosenNumber == 0) {
-						chosenZone = 0
+						chosenZone = 0;
 					} else if (chosenNumber == 1) {
-						chosenZone = 1
+						chosenZone = 1;
 					}
 				}
 				var cy = Math.floor((chosenZone * (myGameArea.canvas.height * 0.33)) + myGameArea.canvas.height * 0.115);
 				myCoins.push(new component(myGameArea.canvas.height * 0.05, myGameArea.canvas.height * 0.05, "blue", x, cy, "coin"));
 			}
+			// console.log(backgrounds[1].x);
+			for (var i = 0; i < backgrounds.length; i++){
+				if (backgrounds[i].x <= 5 && backgrounds.length < 3){
+					// console.log("called yup");
+					backgrounds.push(new component(myGameArea.canvas.width, myGameArea.canvas.height, "green", myGameArea.canvas.width, 0, "background"));
+				}
+			}
+
 			for (i = 0; i < myObstacles.length; i += 1) {
 				myObstacles[i].x += -speed;
 				myObstacles[i].update();
@@ -261,21 +291,24 @@
 				myCoins[i].x += -speed;
 				myCoins[i].update();
 			}
+			for (i = 0; i < backgrounds.length; i += 1) {
+				backgrounds[i].x += -(speed/2);
+				backgrounds[i].update();
+			}
 			if (myGameArea.frameNo == 1 || everyinterval(50)) {
 				score += 1;
-
 			}
-
 			myScore.text = "SCORE: " + score + "  COINS: " + coinScore + "  HIGHSCORE: " + highScore;
 			myScore.update();
 			myGamePiece.newPos();
 			myGamePiece.update();
 			cleanObstacles();
 			cleanCoins();
+			cleanBackground();
 			if (highScore < score) {
 				highScore = score;
 				localStorage.setItem('highScore', highScore);
-			}	
+			}
 		}
 
 		function cleanObstacles() {
@@ -294,6 +327,14 @@
 			}
 		}
 
+		function cleanBackground() {
+			for (var i = backgrounds.length - 1; i >= 0; i--) {
+				if (backgrounds[i].x < -myGameArea.canvas.width){
+					backgrounds.splice(i, 1);
+				}
+			}
+		}
+
 		function everyinterval(n) {
 			if ((myGameArea.frameNo / n) % 1 == 0) {
 				return true;
@@ -302,7 +343,7 @@
 		}
 
 		function newObstacle() {
-			if (myObstacles[myObstacles.length-1].x < myGameArea.canvas.width*0.6) {
+			if (myObstacles[myObstacles.length - 1].x < myGameArea.canvas.width * 0.6) {
 				return true;
 			}
 			return false;
@@ -399,11 +440,19 @@
 			return (0.05 * score) + 1;
 		}
 
-		document.getElementById("script").onmousedown = function() {mouseDown()};
-		document.getElementById("script").onmouseup = function() {mouseUp()};
+		document.getElementById("script").onmousedown = function() {
+			mouseDown()
+		};
+		document.getElementById("script").onmouseup = function() {
+			mouseUp()
+		};
 
-		document.getElementById("script").touchstart = function() {mouseDown()};
-		document.getElementById("script").touchend = function() {mouseUp()};
+		document.getElementById("script").touchstart = function() {
+			mouseDown()
+		};
+		document.getElementById("script").touchend = function() {
+			mouseUp()
+		};
 
 		function mouseDown() {
 			accelerate(-0.2);
