--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<canvas id='cb' style='position: absolute; left: 0px; top: 0px; z-index: 1;'></canvas>
 	<img id="source" src="crowd.png" style="opacity: 0.0;">
 	<script>
-		// choose red aliance and blue, make switches opposite (different patterns maybe (die or loose points))
-		// Slightly more frc themed
-		// Dont forget powerups (boost, force, levitate)
-		// maybe automomous
-		// Collect power cubes for coins
-		// Spend coins (power cubes) on power ups
-		// coins never reset
-		// highscore saves in localStorage
+		// TODO choose red aliance and blue, make switches opposite (different patterns maybe (die or loose points))
+		// TODO Slightly more frc themed
+		// TODO Dont forget powerups (boost, force, levitate)
+		// TODO maybe automomous
+		// TODO Collect power cubes for coins
+		// TODO Spend coins (power cubes) on power ups
+		// TODO coins never reset
+		// TODO highscore saves in localStorage
 
 		window.addEventListener('touchstart', function() {
 			accelerate(-0.2);
